fix(theme): Handle onload flickering (#173)
* Move PageWidth from theme to layout
* Move ContentComponent layout styling to root

--- a/src/components/layout/layout.st.css
+++ b/src/components/layout/layout.st.css
@@ -40,9 +40,11 @@
 
 .scrollablePage {
 	height: 100vh;
-}  
+}
+
 .page {
 	-st-extends: Page;
+	width: value(PageWidth);
 	padding-top: 80px;
 }
 
@@ -93,7 +95,6 @@
 .primaryNav {
 	display: flex;
 }
-
 
 .toggleGroup {
 	-st-extends: LocaleSelector;
