--- a/src/theme/content-component-mixin.st.css
+++ b/src/theme/content-component-mixin.st.css
@@ -23,20 +23,6 @@
   -st-extends: ContentComponent;
 }
 
-.root:type(section),
-.root:type(blockquote) {
-  margin-bottom: 1.8rem;
-}
-
-.root:type(paragraph),
-.root:type(blockquote) {
-  line-height: 1.8rem;
-}
-
-.root:type(blockquote) {
-  padding: 0 1.8rem;
-}
-
 .root:type(link) {
   -st-mixin: linkStyle;
 }
